Prevented word break on underscore text

--- a/src/style.scss
+++ b/src/style.scss
@@ -177,6 +177,7 @@ div.resultsWrap {
   text-align: center;
   display: inline-block;
   width: auto;
+  min-width: max-content;
   padding-top: 0.5rem;
 }
 
